# airflow-emr-serverless-pyspark-demo

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
some_dags/: functions.py  my_dag.py
tests/: test_units.py
